updated all wizard and browse images, addressed CSS issue for about, changed body layout to remove excess space, and corrected game details layout issues caused by change

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -28,7 +28,6 @@ form {
     padding-top: 73px;
     color: #1D3557;
     flex: 1;
-    align-items: center;
     display: flex;
     justify-content: center;
 }
